<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/page_background"
    android:id="@+id/registration_page"
    android:layout_height="match_parent"
    tools:context=".register_page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/user_first_name"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_r_number"
                android:layout_alignStart="@+id/user_r_id"
                android:layout_alignEnd="@+id/user_r_id"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="First Name"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="264dp"
                android:layout_height="54dp"
                android:layout_below="@+id/user_first_name"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="Enter First Name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp" />

            <TextView
                android:id="@+id/user_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name"
                android:layout_alignStart="@+id/user_first_name"
                android:layout_alignEnd="@+id/user_first_name"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:text="Last Name"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="264dp"
                android:layout_height="54dp"
                android:layout_below="@+id/user_last_name"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="Enter Last Name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="208dp"
                android:text="Email Address"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="264dp"
                android:layout_height="54dp"
                android:layout_below="@+id/email"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:paddingLeft="20dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="Enter Email Address"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/r_password"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_name"
                android:layout_alignStart="@+id/user_last_name"
                android:layout_alignEnd="@+id/user_last_name"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:text="Password"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/create_password"
                android:layout_width="264dp"
                android:layout_height="54dp"
                android:layout_below="@+id/r_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:paddingLeft="20dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="Create Password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/confirm_r_password"
                android:layout_width="156dp"
                android:layout_height="21dp"
                android:layout_below="@+id/create_password"
                android:layout_alignStart="@+id/r_password"
                android:layout_alignEnd="@+id/r_password"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="-2dp"
                android:text="Confirm Password"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="264dp"
                android:layout_height="54dp"
                android:layout_below="@+id/confirm_r_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:paddingLeft="20dp"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="Confirm Password"
                android:inputType="textPassword" />


            <TextView
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@+id/confirm_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="33dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:onClick="main_menu"
                android:text="Register"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@+id/register_button"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="33dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:onClick="login"
                android:text="Back to login"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_r_id"
                android:layout_width="181dp"
                android:layout_height="20dp"
                android:layout_below="@+id/spinner"
                android:layout_alignStart="@+id/email"
                android:layout_alignEnd="@+id/email"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="-53dp"
                android:text="Student number"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/user_r_number"
                android:layout_width="264dp"
                android:layout_height="54dp"
                android:layout_below="@+id/user_r_id"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="75dp"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="Enter student number"
                android:inputType="number"
                android:paddingLeft="20dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_email"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:popupBackground="@drawable/logo_background"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignStart="@+id/login_button"
                android:layout_alignTop="@+id/login_button"
                android:layout_alignEnd="@+id/login_button"
                android:layout_marginStart="41dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="190dp"
                app:srcCompat="@drawable/back_icon" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>